--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
       width: auto;
     }
   </style>
-  <link rel="manifest" href="/SP-2025-eSIM/assets/manifest.json?v=3">
-  <meta name="theme-color" content="#0b3d91">
-  <link rel="icon" type="image/png" sizes="32x32" href="/SP-2025-eSIM/assets/icons/favicon-32.png?v=3">
-  <link rel="icon" type="image/png" sizes="16x16" href="/SP-2025-eSIM/assets/icons/favicon-16.png?v=3">
-  <link rel="apple-touch-icon" href="/SP-2025-eSIM/assets/icons/icon-192x192.png?v=3">
+  <link rel="manifest" href="/SP-2025-eSIM/assets/manifest.json">
+  <meta name="theme-color" content="#0b3d91"><link rel="apple-touch-icon" href="/SP-2025-eSIM/assets/icons/icon-192x192.png">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="icon" type="image/png" sizes="192x192" href="/SP-2025-eSIM/assets/icons/icon-192x192.png">
 </head>
 <body>
   <h1>Japan eSIM Providers – Comparison Table</h1>
