--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>📱 Japan – Steph and Sarah’s eSIM Comparison (May 2025)</title>
+  <title>Japan eSIM Comparison</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="/SP-2025-eSIM/assets/icons/icon-192x192.png">
 </head>
 <body>
-  <h1>📱 Japan – Steph and Sarah’s eSIM Comparison (May 2025)</h1>
+  <h1>Japan eSIM Providers – Comparison Table</h1>
   <table>
     <thead>
       <tr>
